--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,15 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>TDD Calculator</title>
-    <!-- load CSS stylesheet from "styles.css" -->
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <div id="calculator">
       <div id="display"></div>
-      <div id="buttons"></div>
+      <div id="buttons">
+        <!-- add calculator buttons -->
+      </div>
     </div>
-    <!-- load JS from "app.js" -->
+    <script src="./app.js"></script>
   </body>
 </html>
