--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,27 @@
   </head>
   <body>
     <div id="calculator">
+      <!-- the entered expression and computed result -->
       <div id="display"></div>
       <div id="buttons">
-        <!-- add calculator buttons -->
+        <button>+</button>
+        <!-- buttons 0-9 should call the function "enterDigit" -->
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>-</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>*</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>/</button>
+        <button>0</button>
+        <button>.</button>
+        <button>=</button>
+        <button>C</button>
       </div>
     </div>
     <script src="./app.js"></script>
