--- a/public/index.html
+++ b/public/index.html
@@ -15,19 +15,19 @@
       <div id="buttons">
         <button>+</button>
         <!-- buttons 0-9 should call the function "enterDigit" -->
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
+        <button onclick="enterDigit(7)">7</button>
+        <button onclick="enterDigit(8)">8</button>
+        <button onclick="enterDigit(9)">9</button>
         <button>-</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
+        <button onclick="enterDigit(4)">4</button>
+        <button onclick="enterDigit(5)">5</button>
+        <button onclick="enterDigit(6)">6</button>
         <button>*</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
+        <button onclick="enterDigit(1)">1</button>
+        <button onclick="enterDigit(2)">2</button>
+        <button onclick="enterDigit(3)">3</button>
         <button>/</button>
-        <button>0</button>
+        <button onclick="enterDigit(0)">0</button>
         <button>.</button>
         <button>=</button>
         <button>C</button>
