--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <button onclick="enterDigit(0)">0</button>
         <button onclick="enterDigit('.')">.</button>
         <button>=</button>
-        <button>C</button>
+        <button onclick="clearDisplay()">C</button>
       </div>
     </div>
     <script src="./app.js"></script>
