--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,9 @@
         </div>
       </div>
       <div id="right-column">
-        <div id="history"></div>
+        <div id="history">
+          <ul id="history-list"></ul>
+        </div>
       </div>
     </div>
     <script src="./app.js"></script>
