--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
         </div>
       </div>
     </div>
+    <!-- use ES6 modules to import the specific functions from the app.js -->
     <script src="./app.js"></script>
   </body>
 </html>
