--- a/public/index.html
+++ b/public/index.html
@@ -54,16 +54,10 @@
       // and set them as properties of the window object
       // so we can still use them as global handlers
       // in the "onclick" attribute of the buttons
-      import {
-        enterDigit,
-        calculate,
-        clearDisplay,
-        appendDot,
-      } from './app.js'
+      import { enterDigit, calculate, clearDisplay } from './app.js'
       window.enterDigit = enterDigit
       window.calculate = calculate
       window.clearDisplay = clearDisplay
-      window.appendDot = appendDot
     </script>
   </body>
 </html>
