--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,8 @@
       <div id="right-column">
         <div id="history">
           <ul id="history-list"></ul>
+          <!-- TODO: finish the copy history button HTML markup -->
+          <button id="copy-history">💾</button>
         </div>
       </div>
     </div>
