--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,7 @@
       <div id="right-column">
         <div id="history">
           <ul id="history-list"></ul>
-          <!-- TODO: finish the copy history button HTML markup -->
-          <button id="copy-history">💾</button>
+          <button id="copy-history" title="Copy history to clipboard" disabled>💾</button>
         </div>
       </div>
     </div>
