--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,11 @@
           <button title="clear display" class="operator-btn">
             C
           </button>
+          <!-- two empty elements to move the language button to the right column -->
+          <div></div>
+          <div></div>
+          <button id="language-flag" title="switch language" class="operator-btn">
+          </button>
         </div>
       </div>
       <div id="right-column">
